// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test to GiftGrid Component should show items when images are load useFetchGift 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    one punch
  </h3>
  <div
    className="card-grid"
  >
    <GiftGridItem
      img={
        Object {
          "id": 123,
          "title": "euche",
          "url": "https://www.hola.com",
          "username": "creting",
        }
      }
      key="123"
    />
  </div>
</Fragment>
`;

exports[`Test to GiftGrid Component snapshot for the GiftGrid component 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    one punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando.....
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
